--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#server.context-path=/blog
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vueblog2?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
